--- a/src/doc/icon.mdx
+++ b/src/doc/icon.mdx
@@ -31,7 +31,8 @@ import ReaxSelect from '../'
 
     return (
       <ReaxSelect
-        searchable
+        label="Name"
+        isSearchable
         value={selectSingle}
         options={options}
         onChange={val => setSelectSingle(val)}
