--- a/src/doc/multi.mdx
+++ b/src/doc/multi.mdx
@@ -20,7 +20,8 @@ import ReaxSelect from '../'
 
     return (
       <ReaxSelect
-        multi
+        title="Favorites brand car"
+        isMulti
         keepSearchOnBlur
         searchable
         value={selectMulti}
