--- a/src/doc/icon.mdx
+++ b/src/doc/icon.mdx
@@ -32,6 +32,7 @@ import ReaxSelect from '../'
     return (
       <ReaxSelect
         label="Name"
+        name="name"
         isSearchable
         value={selectSingle}
         options={options}
