--- a/src/doc/multi.mdx
+++ b/src/doc/multi.mdx
@@ -21,6 +21,7 @@ import ReaxSelect from '../'
     return (
       <ReaxSelect
         title="Favorites brand car"
+        name="brandCar"
         isMulti
         keepSearchOnBlur
         searchable
