--- a/src/doc/index.mdx
+++ b/src/doc/index.mdx
@@ -23,6 +23,7 @@ import ReaxSelect from '../'
     return (
       <ReaxSelect
         label="Favorite brand car"
+        name="brandCar"
         isSearchable
         value={selectSingle}
         options={options}
