update sample label component

--- a/src/doc/icon.mdx
+++ b/src/doc/icon.mdx
@@ -44,15 +44,22 @@ import ReaxSelect from '../'
   }}
 </Playground>
 
-## Label styled
+## Example styled label code
 ```js
 import styled from 'styled-components'
 
-const Label = styled.div`
+const Label = styled.span`
   display: flex;
   align-items: center;
   svg {
     margin-right: .5rem;
   }
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  user-select: none;
+  box-sizing: border-box;
 `
+
+export default Label
 ```
