rename src/Index to src/Select to fix issue with docz can't render props component

--- a/src/doc/error.mdx
+++ b/src/doc/error.mdx
@@ -3,7 +3,7 @@ name: Error description
 route: /error-desc
 ---
 import { Playground } from 'docz'
-import ReaxSelect from '../'
+import ReaxSelect from '../Select'
 
 # Select with error description
 
