--- a/src/doc/icon.mdx
+++ b/src/doc/icon.mdx
@@ -5,7 +5,7 @@ route: /custom-label-icon
 import { Playground } from 'docz'
 import UsersIcon from 'volantis-icon/dist/icons/users'
 import Label from './Label'
-import ReaxSelect from '../'
+import ReaxSelect from '../Select'
 
 # Select with custom label (icon) component
 
