--- a/src/doc/index.mdx
+++ b/src/doc/index.mdx
@@ -3,7 +3,7 @@ name: Basic Select
 route: /
 ---
 import { Playground, Props } from 'docz'
-import ReaxSelect from '../'
+import ReaxSelect from '../Select'
 
 # Reax Select
 
