--- a/src/doc/multi.mdx
+++ b/src/doc/multi.mdx
@@ -3,7 +3,7 @@ name: Multi Value
 route: /multi
 ---
 import { Playground } from 'docz'
-import ReaxSelect from '../'
+import ReaxSelect from '../Select'
 
 # Select with Multi Value
 
